<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <!-- start of Details Activity-->
    <string name="title_activity_details">DetailsActivity</string>
    <string name="movie_title">Title:</string>
    <string name="movie_date">Release Date:</string>
    <string name="movie_description">Description:</string>
    <string name="movie_rating">Rate:</string>
    <string name="movie_popularity">popularity:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_to_favourites_button">Add to favourites</string>
    <string name="remove_from_favourites_button">Remove from favourites</string>
    <!-- start of settings page strings-->
    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_key" translatable="false">SortBy</string>
    <string name="pref_sort_default">popularity.desc</string>
    <string name="pref_sortBy_popularity_value" translatable="false">popularity.desc</string>
    <string name="pref_sortBy_voteAverage_value" translatable="false">vote_average.desc</string>
    <string name="pref_sortBy_popularity_label">Popularity</string>
    <string name="pref_sortBy_voteAverage_label">vote Average</string>
    <string name="pref_sortBy_favourites_label">Favourites</string>
    <string name="pref_sortBy_favourites_value" translatable="false">favourites</string>
</resources>
