<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:showIn="@layout/activity_details"
        tools:context="com.example.kemo.movieapp.DetailsActivityFragment"
>
    <ImageView android:layout_width="200dp" android:layout_height="250dp" android:id="@+id/Detail_poster_imageView"
               android:layout_alignParentLeft="true"
               android:layout_alignParentTop="true"
               android:background="#aaa"

    />
    <TextView
            android:id="@+id/movieTitle_textView"
            android:layout_toRightOf="@+id/Detail_poster_imageView"
            android:layout_alignParentTop="true"
            android:text="@string/movie_title"
            style="@style/text_view_style"
    />
    <TextView  style="@style/text_view_style"
               android:id="@+id/movieDate_textView"
               android:layout_toRightOf="@+id/Detail_poster_imageView"
               android:layout_below="@+id/movieTitle_textView"
               android:text="@string/movie_date"
    />
    <TextView  style="@style/text_view_style"
               android:id="@+id/movieDescription_textView"
               android:layout_below="@+id/Detail_poster_imageView"
               android:layout_alignParentLeft="true"
               android:text="@string/movie_description"
    />
    <TextView  style="@style/text_view_style"
               android:id="@+id/movieVoteAverage_textView"
               android:layout_below="@+id/movieDescription_textView"
               android:layout_alignParentLeft="true"
               android:text="@string/movie_rating"
    />
    <TextView  style="@style/text_view_style"
               android:id="@+id/moviePopularity"
               android:text="@string/movie_popularity"
               android:layout_toRightOf="@id/Detail_poster_imageView"
               android:layout_below="@id/movieDescription_textView"
    />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_below="@id/movieVoteAverage_textView"
                  android:background="#3000">
        <org.apmem.tools.layouts.FlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trailers_container"
        >
            <LinearLayout android:padding="10dp" android:layout_width="wrap_content" android:id="@+id/movie_trailers_loading" android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView android:layout_width="wrap_content" android:textColor="@color/colorAccent" android:layout_marginRight="10dp" android:layout_height="wrap_content" android:text="Loading Trailers"/>
                <ProgressBar android:layout_width="15dp"
                             android:layout_height="15dp"
                             android:indeterminate="true"
                             android:visibility="visible"
                             android:layout_centerInParent="true"
                />
            </LinearLayout>
        </org.apmem.tools.layouts.FlowLayout>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#fff"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/colorPrimary"
            android:id="@+id/favourites_button"
            android:layout_below="@+id/movieDate_textView" android:layout_alignLeft="@+id/movieDate_textView"
            android:layout_alignStart="@+id/movieDate_textView"/>
</RelativeLayout>